test/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Invoice_Amount__c</fullName>
        <label>Net Invoice Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Debit card</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Mobile payment/UPI</fullName>
                </value>
                <value>
                    <fullName>Electronic bank transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                    <default>true</default>
                    <label>Unpaid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Mobile</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <defaultValue>TIMENOW()+(5.30/24)</defaultValue>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount__c</fullName>
        <label>Total Discount Amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Amount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Date__c</columns>
        <columns>Email__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{0}</displayFormat>
        <label>Invoice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>address</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISBLANK( Address__Street__s ), ISBLANK( Address__City__s ),  ISBLANK(TEXT(Address__StateCode__s)),  ISBLANK( Address__PostalCode__s ), ISBLANK(TEXT(Address__CountryCode__s)) )</errorConditionFormula>
        <errorMessage>Fill all address field details.</errorMessage>
    </validationRules>
</CustomObject>